test/error/func_arg_array_empty.gw
function int[4] my_func(){}
